[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.1.3",
    "duckduckgo-search>=7.5.5",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.2",
    "langchain-openai>=0.3.11",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "wikipedia>=1.4.0",
]
